# XRobot

src/component/: CMakeLists.txt  comp_cmd.hpp  comp_kalman.cpp  comp_kalman.hpp  comp_utils.cpp  comp_vmc.cpp  comp_vmc.hpp  component.hpp
src/device/MA600/: dev_MA600.cpp  dev_MA600.hpp
src/device/ahrs-k/: dev_ahrs.cpp  dev_ahrs.hpp
src/device/ai/: dev_ai.cpp  dev_ai.hpp
src/device/aim/: dev_aim.cpp  dev_aim.hpp
src/device/canfd/: dev_can.cpp  dev_can.hpp
src/device/cap/: dev_cap.cpp
src/device/cap_parallel/: dev_cap_parallel.cpp  dev_cap_parallel.hpp
src/device/dr16/: dev_dr16.cpp  dev_dr16.hpp
src/device/laser/: Kconfig  dev_laser.cpp  dev_laser.hpp
src/device/motor/: dev_mit_motor.cpp
src/module/Radar/: mod_Radar.cpp  mod_Radar.hpp
src/module/chassis/: mod_chassis.cpp
src/module/custom_controller/: mod_custom_controller.cpp  mod_custom_controller.hpp
src/module/dm_balance/: mod_dm_balance.cpp  mod_dm_balance.hpp
src/module/gimbal/: mod_gimbal.cpp  mod_gimbal.hpp
src/module/helm_chassis/: mod_helm_chassis.cpp  mod_helm_chassis.hpp
src/module/hero_launcher/: Kconfig
src/module/launcher/: mod_launcher.cpp
src/module/mit_control/: mod_mit_control.cpp  mod_mit_control.hpp
src/module/omni_chassis/: mod_omni_chassis.cpp
src/module/speed_control/: mod_speed_control.cpp  mod_speed_control.hpp
src/robot/Radar_car/: robot.cpp  robot.hpp
src/robot/arm_engineer/: robot.cpp
src/robot/custom_ctrl_spi/: robot.cpp  robot.hpp
src/robot/dm_robot/: robot.cpp  robot.hpp
src/robot/helm_infantry/: robot.cpp
src/robot/hero/: robot.cpp
(+56 files in other folders)
